crates/icydb-core/tests/ui/executor_requires_executable_plan.stderr
error[E0603]: module `executor` is private
 --> tests/ui/executor_requires_executable_plan.rs:1:21
  |
1 | use icydb_core::db::executor::LoadExecutor;
  |                     ^^^^^^^^ private module
  |
note: the module `executor` is defined here
 --> src/db/mod.rs
  |
  | pub(crate) mod executor;
  | ^^^^^^^^^^^^^^^^^^^^^^^
